[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Xinyu Zhao <xinyu.zhao@crypto.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.2"
moto = {extras = ["kms"], version = "^5.0.2"}
boto3 = "^1.34.55"
staking-deposit = {git = "https://github.com/ethereum/staking-deposit-cli.git", rev = "v2.3.0"}
eth-utils = "^4.0.0"
click = "^8.1.7"
py-ecc = "^7.0.0"
cryptography = "^42.0.5"
pycryptodome = "^3.20.0"
ssz = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
